# swe520capstone-agentic-hpo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.flwr/: config.toml
configs/: agentic_hpo.pkl  baseline.pkl  federated_sgd.pkl  preprocessor.pkl  static_hpo.pkl
docs/: approach_overview.drawio
results/docs/: 2026-03-14_convergence_charts.xlsx  2026-03-14_stats_tables.xlsx
results/docs/pre_leakage_fixes/: 2026-02-24_convergence_charts.xlsx  2026-02-24_stats_tables.xlsx
results/logs/: 2026-02-24_agentic_hpo_20rounds.txt  2026-02-24_agentic_hpo_40rounds.txt  2026-02-24_baseline_20rounds.txt  2026-02-24_baseline_40rounds.txt  2026-03-10_baseline_40rounds.txt  2026-03-10_static_hpo_40rounds_15trials.txt  2026-03-14_agentic_hpo_40rounds.txt
results/logs/pre_leakage_fixes/: 2026-02-24_static_hpo_20rounds_15trials.txt  2026-02-24_static_hpo_40rounds_15trials.txt  2026-03-10_agentic_hpo_20rounds.txt  2026-03-10_agentic_hpo_40rounds.txt  2026-03-10_baseline_20rounds.txt  2026-03-10_static_hpo_20rounds_15trials.txt
src/fedlearn/agentic_hpo/: client_app.py  runners.py  server_app.py
src/fedlearn/common/: annotation.py  config.py  logging_config.py  metrics.py  model.py
src/fedlearn/federated/: utils.py
src/fedlearn/hpo/: __init__.py  agents.py  client_app.py  runners.py  server_app.py
