[project]
name = "agentic-hpo-fl"
description = "SWE 520 Capstone - Agent-based HPO for Federated Learning"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
authors = [{ name = "Jim Prantzalos" }]
license = { file = "LICENSE" }
readme = "README.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fedlearn"]

[tool.flwr.app]
publisher = "umich"
name = "swe520capstone-agentic-hpo"

[tool.flwr.app.components]
clientapp = "fedlearn.agentic_hpo.client_app:app"
serverapp = "fedlearn.agentic_hpo.server_app:app"

[tool.flwr.app.config]
# baseline | static_hpo | agent_hpo
experiment = "baseline"

# shared settings
num-server-rounds = 3
local-epochs = 3
penalty = "l2"
class-weight = "none"
sgd-learning-rate = "optimal"
#sgd-eta0 = 0.001 # only useful when learning-rate=constant|adaptive

# server_app settings
fraction-train = 1.0
fraction-evaluate = 1.0
